# SankeyFinancial

./: .coveragerc  =4.2.0  README.md  pyproject.toml
SankeyFinancial/: get_data.py  utils.py
plots/: aapl2021.html
