[tool.poetry]
name = "SankeyFinancial"
version = "0.0.1"
description = "A package to produce sankey diagrams on public traded company's financial statement data."
license = "MIT"
readme = "README.md"
homepage = "https://github.com/cyzhu/SankeyFinancial"
repository = "https://github.com/cyzhu/SankeyFinancial"
keywords = ["financial statement","sankey diagram"]
authors = ["Chongyang Zhu <cyzhu95@gmail.com>"]

[tool.poetry.dependencies]
python = "~3.9"
pandas = "<=1.3.5"
numpy = "^1.19.5"
matplotlib = ">=3.4.2,<3.6"
plotly = "^5.1.0"
sec-edgar-api = "~1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.1.3"
pytest-cov = "^3.0.0"
pre-commit = "^2.20.0"
black = "^22.6.0"
flake8-black = "^0.3.3"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
